--- a/output/presentation/index.html
+++ b/output/presentation/index.html
@@ -52,7 +52,8 @@
 <p>sample code and slides <a href="http://www.github.com/jedschneider">github.com/jedschneider</a><br />
 twitter <a href="http://www.twitter.com/jedschneider">twitter.com/jedschneider</a><br />
 email <a href="mailto:jed.schneider@gmail.com">jed.schneider@gmail.com</a></p>
-<p>Adobe Open Source <a href="http://opensource.adobe.com">http://opensource.adobe.com</a><br />
+<p>Tour de Flex <a href="http://www.adobe.com/devnet/flex/tourdeflex/">http://www.adobe.com/devnet/flex/tourdeflex/</a><br />
+Adobe Open Source <a href="http://opensource.adobe.com">http://opensource.adobe.com</a><br />
 Flex and Flash Builder <a href="http://adobe.com/flex">http://adobe.com/flex</a></p>
 <p>HTML/CSS Presentation Generator <a href="http://webby.rubyforge.org">http://webby.rubyforge.org</a></p>
 <p>FluTracker <a href="http://flutracker.rhizalabs.com/">http://flutracker.rhizalabs.com/</a></p>
@@ -85,6 +86,8 @@ Flex and Flash Builder <a href="http://adobe.com/flex">http://adobe.com/flex</a>
 <h1>More Reasons?&#8230;</h1>
 <ul>
 	<li>robust object oriented language</li>
+	<li>stateless</li>
+	<li>defer/cache/process data on the client</li>
 	<li>consistent deployment</li>
 	<li>Desktop Runtime (AIR)</li>
 	<li>shake hands with existing (aka, <em>legacy</em>) backend solutions: <em>&#8216;hi Java, I&#8217;m Flex&#8217;</em></li>
@@ -361,6 +364,7 @@ Flex and Flash Builder <a href="http://adobe.com/flex">http://adobe.com/flex</a>
 <div class="slide">
 <h1>Visualize, Again.</h1>
 <p>Lets do something cool when we click on a report in the column chart.</p>
+<p>Follow Along: <code>git checkout -f b88094</code></p>
 <div class="UltraViolet">
 <pre class="twilight"><span class="line-numbers">   1 </span> protected <span class="Storage">function</span> <span class="Entity">clickHandler</span>(<span class="Variable">event:ChartItemEvent</span>)<span class="Keyword">:</span><span class="SupportFunction">void</span>
 <span class="line-numbers">   2 </span> {
@@ -388,11 +392,11 @@ Flex and Flash Builder <a href="http://adobe.com/flex">http://adobe.com/flex</a>
 
 <div class="slide">
 <h1>Resources</h1>
-<p>Follow Along: <code>git checkout -f b88094</code></p>
 <p>sample code and slides <a href="http://www.github.com/jedschneider">github.com/jedschneider</a><br />
 twitter <a href="http://www.twitter.com/jedschneider">twitter.com/jedschneider</a><br />
 email <a href="mailto:jed.schneider@gmail.com">jed.schneider@gmail.com</a></p>
-<p>Adobe Open Source <a href="http://opensource.adobe.com">http://opensource.adobe.com</a><br />
+<p>Tour de Flex <a href="http://www.adobe.com/devnet/flex/tourdeflex/">http://www.adobe.com/devnet/flex/tourdeflex/</a><br />
+Adobe Open Source <a href="http://opensource.adobe.com">http://opensource.adobe.com</a><br />
 Flex and Flash Builder <a href="http://adobe.com/flex">http://adobe.com/flex</a></p>
 <p>HTML/CSS Presentation Generator <a href="http://webby.rubyforge.org">http://webby.rubyforge.org</a></p>
 <p>FluTracker <a href="http://flutracker.rhizalabs.com/">http://flutracker.rhizalabs.com/</a></p></div>
